Switch to ssh-agent with KeepassXC
Do not use gpg-agent as ssh-agent

Signed-off-by: Thomas Ruschival <thomas@ruschival.de>

--- a/dot.config/systemd/user/gpg-agent.service
+++ b/dot.config/systemd/user/gpg-agent.service
@@ -4,5 +4,5 @@ Documentation=man:gpg-agent(1)
 Requires=gpg-agent.socket
 
 [Service]
-ExecStart=/usr/bin/gpg-agent --supervised --enable-ssh-support 
+ExecStart=/usr/bin/gpg-agent --supervised
 ExecReload=/usr/bin/gpgconf --reload gpg-agent
