--- a/dot.gnupg/gpg-agent.conf
+++ b/dot.gnupg/gpg-agent.conf
@@ -1,3 +1,3 @@
-default-cache-ttl 18000
-max-cache-ttl 86400
-ignore-cache-for-signing
+# default-cache-ttl 18000
+# max-cache-ttl 86400
+# ignore-cache-for-signing
