--- a/dot.config/systemd/user/ssh-agent.service
+++ b/dot.config/systemd/user/ssh-agent.service
@@ -3,6 +3,7 @@ Description=SSH key agent
 
 [Service]
 Type=simple
+Environment=SSH_AUTH_SOCK=/run/user/1000/ssh-agent.socket
 ExecStart=/usr/bin/ssh-agent -D -a $SSH_AUTH_SOCK
 ExecStartPost=/usr/bin/systemctl --user set-environment SSH_AUTH_SOCK=${SSH_AUTH_SOCK}
 [Install]
